cabal-version: 2.2
name:          name
category:      Pure Nominal Logic
version:       0
license:       BSD-2-Clause OR Apache-2.0
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/name/
bug-reports:   http://github.com/ekmett/name/issues
copyright:     Copyright (C) 2018 Edward A. Kmett
synopsis:      Nominal sets
description:   Nominal sets.
build-type:    Simple

extra-source-files:

source-repository head
  type: git
  location: git://github.com/ekmett/name.git

-- this requires concat, which isn't on hackage
flag concat
  default: False
  manual: True
  description: compile with (experimental) concat support

library
  build-depends:
    base                >= 4 && < 5,
    containers,
    contravariant,
    discrimination      >= 0.4,
    fingertree,
    ghc-prim,
    lens,
    primitive,
    integer-gmp,
    semigroupoids,
    transformers        >= 0.5.5 && < 0.6,
    mtl                 >= 2.2.2 && < 2.3

  hs-source-dirs: src/name
  ghc-options: -Wall
  default-language: Haskell2010

  exposed-modules:
    Name
    Name.Internal.Fun
    Name.Internal.Map
    Name.Internal.Trie
    Name.Internal.Permutation
    Name.Atom
    Name.Category
    Name.Class
    Name.Lattice
    Name.Logic
    Name.Map
    Name.Permutation
    Name.Set
    Name.Support
    Name.Substitution
    Name.Suspension
    Name.Tie

library plugin
  default-language: Haskell2010
  if !flag(concat)
    buildable: False
  else
    build-depends:
      base,
      concat-plugin,
      concat-classes,
      constraints,
      name
    exposed-modules:
      Name.Plugin
    hs-source-dirs: src/plugin
    ghc-options: -Wall
