cabal-version: 2.2
name:          name
category:      Nominal Logic
version:       0
license:       BSD-2-Clause OR Apache-2.0
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/name/
bug-reports:   http://github.com/ekmett/name/issues
copyright:     Copyright (C) 2018 Edward A. Kmett
synopsis:      Nominal sets
description:   Nominal sets.
build-type:    Simple

extra-source-files:

source-repository head
  type: git
  location: git://github.com/ekmett/name.git

library
  build-depends:
    base                >= 4 && < 5,
    containers,
    contravariant,
    discrimination      >= 0.4,
    fingertree,
    ghc-prim,
    lens,
    primitive,
    integer-gmp,
    semigroupoids,
    transformers        >= 0.5.5 && < 0.6,
    mtl                 >= 2.2.2 && < 2.3

  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010

  exposed-modules:
    Data.Name
    Data.Name.Internal.Fun
    Data.Name.Internal.Map
    Data.Name.Internal.Perm
    Data.Name.Internal.Trie
    Data.Name.Category
    Data.Name.Class
    Data.Name.Lattice
    Data.Name.Logic
    Data.Name.Map
    Data.Name.Permutation
    Data.Name.Set
    Data.Name.Support
    Data.Name.Substitution
    Data.Name.Suspension
    Data.Name.Tie
    Data.Name.Type
