cabal-version: 2.2
name:          nominal
category:      Nominal Logic
version:       0
license:       BSD-2-Clause OR Apache-2.0
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/nominal/
bug-reports:   http://github.com/ekmett/nominal/issues
copyright:     Copyright (C) 2018 Edward A. Kmett
synopsis:      Nominal sets
description:   Nominal sets.
build-type:    Simple

extra-source-files:

source-repository head
  type: git
  location: git://github.com/ekmett/nominal.git

-- this requires concat, which isn't on hackage
flag concat
  default: False
  manual: True
  description: compile with (experimental) concat support

library
  build-depends:
    base                >= 4 && < 5,
    containers,
    contravariant,
    fingertree,
    ghc-prim,
    lens,
    primitive,
    integer-gmp,
    semigroupoids,
    transformers        >= 0.5.5 && < 0.6,
    mtl                 >= 2.2.2 && < 2.3

  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010

  exposed-modules:
    Nominal.Internal.Trie
    Nominal.Internal.Logic
    Nominal.Internal.Permutation
    Nominal.Atom
    Nominal.Lattice
    Nominal.Logic
    Nominal.Permutation
    Nominal.Set
    Nominal.Support
    Nominal.Supported

  if False
    exposed-modules:
      Nominal
      Nominal.Category
      Nominal.Class
      Nominal.Internal.Map
      Nominal.Internal.Set
      Nominal.Map
      Nominal.Suspension
      Nominal.Tie
  
library plugin
  default-language: Haskell2010
  if !flag(concat)
    buildable: False
  else
    build-depends:
      base,
      concat-plugin,
      concat-classes,
      constraints,
      nominal
    exposed-modules:
      Nominal.Plugin
    hs-source-dirs: plugin
    ghc-options: -Wall
